<resources>
  <string name="app_name" translatable="false">DriverLocation</string>
  <string name="map_available">I\'m available to work</string>
  <string name="map_need_location">Beetrack need your location to continue</string>
  <string name="map_not_available">I\'m not available</string>
  <string name="empty_content_not_gps">We can\'t find your location because your GPS is disabled</string>
  <string name="empty_not_gps">Disabled GPS</string>
  <string name="empty_select_a_place">Select the warehouse where you are right now to start your workday</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
