<android.support.constraint.ConstraintLayout
    android:id="@+id/constraintHolder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beetrack.test.abarza.driverlocation.location.LocationNotFoundFragment">

  <RelativeLayout
      android:id="@+id/bottomShade"
      android:layout_width="0dp"
      android:layout_height="150dp"
      android:layout_marginTop="32dp"
      android:background="@drawable/gradient_light_map_bottom"
      android:paddingBottom="25dp"
      android:paddingLeft="50dp"
      android:paddingRight="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0">


    <Button
        android:id="@+id/availableButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/unavailableButton"
        android:layout_centerInParent="true"
        android:background="@drawable/enable_button_selector"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/map_available"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/unavailableButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/disable_button_selector"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/map_not_available"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

  </RelativeLayout>

  <LinearLayout
      android:id="@+id/emptyContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingBottom="20dp"
      android:paddingLeft="50dp"
      android:paddingRight="50dp"
      android:paddingTop="25dp"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.681">

    <ImageView
        android:id="@+id/emptyIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:srcCompat="@drawable/ic_notgps"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/emptyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/empty_not_gps"
        android:textSize="16sp"
        android:textColor="@color/button_not_active"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/emptyContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_content_not_gps"
        android:textAlignment="center"/>
  </LinearLayout>

  <android.support.v7.widget.RecyclerView
      android:id="@+id/placesList"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toTopOf="@+id/bottomShade"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/emptyContainer"/>

</android.support.constraint.ConstraintLayout>
